moving to includes to prepare for custom widts

--- a/example/example.css
+++ b/example/example.css
@@ -6,7 +6,9 @@ body{
     font-family: 'Metrophobic', sans-serif;
 }
 .info{
+    float:left;
     display: table;
+    margin-right: 2em;
 }
 .info>div{
     display: table-row;
