--- a/example/includes/responsiveIf.html
+++ b/example/includes/responsiveIf.html
@@ -1,9 +1,9 @@
-<h2>responsive-if</h2>
-<div class="info">
+<h2 class="heading">responsive-if</h2>
+<div class="float info">
     <div ng-repeat="class in visibleClasses" ng-include="'includes/classRow.html'">
     </div>
 </div>
-<div class="info">
+<div class="float info">
     <div ng-repeat="class in hiddenClasses" ng-include="'includes/classRow.html'">
     </div>
 </div>
