--- a/example/includes/responsiveIf.html
+++ b/example/includes/responsiveIf.html
@@ -1,9 +1,11 @@
 <h2 class="heading">responsive-if</h2>
-<div class="float info">
-    <div ng-repeat="class in visibleClasses" ng-include="'includes/classRow.html'">
+<div class="clear">
+    <div class="float info">
+        <div ng-repeat="class in visibleClasses" ng-include="'includes/classRow.html'">
+        </div>
     </div>
-</div>
-<div class="float info">
-    <div ng-repeat="class in hiddenClasses" ng-include="'includes/classRow.html'">
+    <div class="float info">
+        <div ng-repeat="class in hiddenClasses" ng-include="'includes/classRow.html'">
+        </div>
     </div>
 </div>
