--- a/example/includes/responsiveIf/responsiveIf.tpl.html
+++ b/example/includes/responsiveIf/responsiveIf.tpl.html
@@ -1,11 +1,11 @@
 <h2 class="heading">responsive-if</h2>
 <div class="clear">
     <div class="float info">
-        <div ng-repeat="class in visibleClasses" ng-include="'includes/responsiveIf/classRow.html'">
+        <div ng-repeat="class in visibleClasses" ng-include="'includes/responsiveIf/classRow.tpl.html'">
         </div>
     </div>
     <div class="float info">
-        <div ng-repeat="class in hiddenClasses" ng-include="'includes/responsiveIf/classRow.html'">
+        <div ng-repeat="class in hiddenClasses" ng-include="'includes/responsiveIf/classRow.tpl.html'">
         </div>
     </div>
 </div>
