--- a/example/includes/ngIf/ngIf.tpl.html
+++ b/example/includes/ngIf/ngIf.tpl.html
@@ -1,4 +1,4 @@
-<h2 class="heading">ng-if <span class="subHeading">using BooleanResponder</span></h2>
+<h2 class="heading">ngIf <span class="subHeading">using BooleanResponder</span></h2>
 <div class="clear">
     <div class="float info">
         <div ng-init="base=visible" ng-repeat="class in visibleClasses" ng-include="'includes/ngIf/classRow.tpl.html'">
