--- a/example/includes/responsiveIf/responsiveIf.tpl.html
+++ b/example/includes/responsiveIf/responsiveIf.tpl.html
@@ -1,4 +1,4 @@
-<h2 class="heading">responsive-if</h2>
+<h2 class="heading">responsiveIf</h2>
 <div class="clear">
     <div class="float info">
         <div ng-repeat="class in visibleClasses" ng-include="'includes/responsiveIf/classRow.tpl.html'">
